# ai-tax-workflow-reference

./: CLAUDE.md  DESIGN_DOC.md  IMPLEMENTATION_PLAN.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/commands/: dev.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/nextjs/: package.json
docs/: architecture.d2  architecture.md  flow.d2
